# rust-webass-bjorli

./: bygg_side.sh  shell.nix
bjorli/: Cargo.toml  bever.css  index.html  index.js  style.css
bjorli/src/: game_data_structure.rs  game_scores.rs  lib.rs  weather.rs
side/: index.html  style.css
side/pkg/: bjorli.d.ts  bjorli.js  bjorli_bg.wasm  bjorli_bg.wasm.d.ts  package.json
