[package]
name = "bjorli"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = { version = "0.2.93", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde-wasm-bindgen = "0.5" 

[lib]
crate-type = ["cdylib"]
